# market-data

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: MARK1.agent.md
docs/: ISSUE_185_179_RESOLUTION.md  SCHEDULING.md
docs/research/: 01_market_leaderboards_2026.md  02_local_vs_api_cost_analysis.md  03_technical_analysis_precision.md  04_local_optimization_27gb.md  05_final_recommendation_matrix.md  06_llm_trading_benchmarks_2026.md  07_implementation_roadmap.md  08_prompt_strategy.md
scripts/: backfill_btc_1d.py  sync_agents_from_central.sh
src/market_data/: __init__.py  config.py  daemon.py  rate_limiter.py  types.py
src/market_data/api/: main.py
src/market_data/api/routes/: candles.py  status.py
src/market_data/exchanges/: __init__.py  base.py  bitfinex.py  bitfinex_ws.py
src/market_data/services/: __init__.py  backfill.py  gap_repair.py
src/market_data/storage/: __init__.py  postgres.py  schema.sql
systemd/: market-data.service
tests/: conftest.py  test_bitfinex_ws.py
